corpus/cpp/pointer_reference/case-01/snapshots/gcc15_plus/dual_sink_structured/render.concise.txt
error: invalid pointer or reference operation
--> src/main.cpp:5:16
help: provide the full type definition via #include or fix the value category
why: invalid use of incomplete type 'struct Node'
| src/main.cpp:5:16
|     return node->value;
|                ^
note: forward declaration of 'struct Node'
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output